<resources>
    <string name="app_name">WordCounter</string>
    <string name="wordcount">0</string>
    <string name="input_sentence">Write a sentence here</string>
    <string name="submit">submit</string>
    <string name="wordCountHeader">Your word count is:</string>
    <string name="occurence_header">These words appear this many times:</string>
    <string name="occurences_map" />
    <string name="example_text">word:number</string>
    <string name="occurences">word:count</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="about_activity_title">About</string>
    <string name="settings_activity_title">Settings</string>
    <string name="about_header">About this App</string>
    <string name="info_box">This app is designed to count the amount of words in a phrase as well as occurences of those words.</string>
    <string name="made_by">This was made by this guy:</string>
    <string name="coming_soon">Feature coming soon...</string>
    <string name="count_activity_title">Word Count</string>
</resources>
